--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>wx.user</module>
         <module>test.web</module>
+        <module>base</module>
     </modules>
 
 
