--- a/test.web/pom.xml
+++ b/test.web/pom.xml
@@ -6,17 +6,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>test.web</artifactId>
-
+    <groupId>ops.model.X</groupId>
+    <version>1.0.0.RELEASE</version>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.3.RELEASE</version>
+        <version>2.1.4.RELEASE</version>
     </parent>
 
-    <properties>
-        <maven-jar-plugin.version>2.6</maven-jar-plugin.version>
-        <skipTests>true</skipTests>
-    </properties>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test -->
@@ -26,18 +23,8 @@
             <scope>test</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
 
         <!-- 请不要使用1.0.0版本，因为还不支持拦截器插件 -->
-        <!-- druid阿里巴巴数据库连接池 -->
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid-spring-boot-starter</artifactId>
-            <version>1.1.18</version>
-        </dependency>
         <!-- MySql数据库驱动 -->
         <dependency>
             <groupId>mysql</groupId>
