--- a/file.system/pom.xml
+++ b/file.system/pom.xml
@@ -2,18 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-
     <groupId>ops.model.X</groupId>
-    <artifactId>all</artifactId>
-    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>wx.user</module>
-        <module>test.web</module>
-        <module>base</module>
-        <module>file.system</module>
-    </modules>
+    <modelVersion>4.0.0</modelVersion>
+    <artifactId>file.system</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>ops.model.X</groupId>
+            <artifactId>base</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
