--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>base</module>
         <module>file.system</module>
         <module>wx.api</module>
+        <module>auth</module>
     </modules>
 
 
