--- a/base/pom.xml
+++ b/base/pom.xml
@@ -35,6 +35,12 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>2.1.4.RELEASE</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.gavaghan/geodesy -->
+        <dependency>
+            <groupId>org.gavaghan</groupId>
+            <artifactId>geodesy</artifactId>
+            <version>1.1.3</version>
+        </dependency>
     </dependencies>
 
 
