--- a/wx.api/pom.xml
+++ b/wx.api/pom.xml
@@ -4,6 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <groupId>ops.model.X</groupId>
     <version>1.0-SNAPSHOT</version>
+    <modelVersion>4.0.0</modelVersion>
+    <artifactId>wx.api</artifactId>
     <build>
         <plugins>
             <plugin>
@@ -16,10 +18,14 @@
             </plugin>
         </plugins>
     </build>
-    <modelVersion>4.0.0</modelVersion>
-    <artifactId>wx.api</artifactId>
+
 
     <dependencies>
+        <dependency>
+            <groupId>ops.model.X</groupId>
+            <artifactId>base</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.directory.studio</groupId>
             <artifactId>org.apache.commons.codec</artifactId>
