--- a/file.system/pom.xml
+++ b/file.system/pom.xml
@@ -14,5 +14,31 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
+    <repositories>
+        <repository>
+            <id>releases</id>
+            <name>maven-public</name>
+            <url>http://www.chuyinkeji.cn:8081/repository/maven-public/</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </repository>
+    </repositories>
 
+    <distributionManagement>
+        <repository>
+            <!--此id要与setting.xml里面server的id对应-->
+            <id>releases</id>
+            <name>releases Repository</name>
+            <url>http://www.chuyinkeji.cn:8081/repository/maven-releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>snapshots</id>
+            <name>snapshots</name>
+            <url>http://www.chuyinkeji.cn:8081/repository/maven-snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
