--- a/auth/pom.xml
+++ b/auth/pom.xml
@@ -20,6 +20,11 @@
     </build>
     <dependencies>
         <dependency>
+            <groupId>ops.model.X</groupId>
+            <artifactId>base</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>com.auth0</groupId>
             <artifactId>java-jwt</artifactId>
             <version>3.3.0</version>
@@ -38,5 +43,33 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>releases</id>
+            <name>maven-public</name>
+            <url>http://www.chuyinkeji.cn:8081/repository/maven-public/</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </repository>
+    </repositories>
+
+    <distributionManagement>
+        <repository>
+            <!--此id要与setting.xml里面server的id对应-->
+            <id>releases</id>
+            <name>releases Repository</name>
+            <url>http://www.chuyinkeji.cn:8081/repository/maven-releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>snapshots</id>
+            <name>snapshots</name>
+            <url>http://www.chuyinkeji.cn:8081/repository/maven-snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
 
 </project>
